# CodeEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
codeEditor/: CMakeLists.txt  breakPointArea.cpp  breakPointArea.h  cHighLight.cpp  cHighLight.h  codeEditor.cpp  codeEditor.h  editorSideArea.cpp  editorSideArea.h  lineNumberArea.cpp  lineNumberArea.h
codeEditor/include/codeEditor/: breakPointArea.h  cHighLight.h  codeEditor.h  lineNumberArea.h
codeEditor/include/codeEditor/common/: forceAccess.h
codeEditor/src/: breakPointArea.cpp  cHighLight.cpp  codeEditor.cpp  lineNumberArea.cpp
codeEditor/src/common/: forceAccess.cpp
common/: forceAccess.cpp  forceAccess.h
resource/: testcode.txt
test/: CMakeLists.txt  globaldata.cpp  globaldata.h  lspevent.h  lspqthandler.cpp  lspqthandler.h  lspqtprocesscilent.cpp  lspqtprocesscilent.h  main.cpp  mainwindow.cpp  mainwindow.h
test/testcode/: CMakeLists.txt  Food.cpp  Food.h  compile_commands.json  新建 文本文档.txt
test/testcode/.cache/clangd/index/: Food.cpp.00A6E70893D71C70.idx  Food.h.FDB06146231670CD.idx
